finished animation for all pages

--- a/www/about.html
+++ b/www/about.html
@@ -94,10 +94,10 @@
         <div class="about-cover">
         </div>
         <div class="about-container">
-          <h2 class="about-title">
+          <h2 class="about-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             About
           </h2>
-          <div class="about-wrap">
+          <div class="about-wrap" data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-out-quad">
             <div class="about-info">
               <p class="about-text">
                 Farhad Sadykov was born in 1994 and raised in Turkmenistan,
