--- a/www/better-days.html
+++ b/www/better-days.html
@@ -94,119 +94,119 @@
         <div class="better-days-cover">
         </div>
         <div class="better-days-container">
-          <h2 class="better-days-title">
+          <h2 class="better-days-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             Better days
           </h2>
-          <p class="better-days-desc">
+          <p class="better-days-desc" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             A series of street photographs that were taken between 2015 and 2017.
           </p>
           <div class="better-days-gallery">
-            <a href="../images/better-days/bd-img-1.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-1.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-1.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-2.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-2.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-2.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-3.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-3.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-3.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-4.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-4.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-4.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-5.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-5.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-5.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-6.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-6.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-6.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-7.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-7.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-7.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-8.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-8.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-8.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-9.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-9.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-9.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-10.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-10.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-10.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-11.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-11.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-11.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-12.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-12.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-12.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-13.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-13.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-13.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-14.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-14.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-14.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-15.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-15.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-15.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-16.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-16.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-16.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-17.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-17.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-17.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-18.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-18.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-18.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-19.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-19.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-19.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-20.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-20.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-20.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-21.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-21.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-21.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-22.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-22.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-22.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-23.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-23.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-23.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-24.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-24.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-24.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-25.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-25.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-25.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-26.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-26.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-26.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-27.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-27.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-27.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-28.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-28.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-28.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-29.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-29.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-29.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-30.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-30.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-30.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-31.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-31.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-31.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-32.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-32.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-32.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-33.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-33.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-33.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-34.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-34.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-34.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-35.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-35.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-35.jpg" class="better-days-img">
             </a>
-            <a href="../images/better-days/bd-img-36.jpg" class="better-days-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/better-days/bd-img-36.jpg" class="better-days-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/better-days/bd-img-36.jpg" class="better-days-img">
             </a>
           </div>
