--- a/www/city-glow.html
+++ b/www/city-glow.html
@@ -94,101 +94,101 @@
         <div class="city-glow-cover">
         </div>
         <div class="city-glow-container">
-          <h2 class="city-glow-title">
+          <h2 class="city-glow-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             City glow
           </h2>
-          <p class="city-glow-desc">
+          <p class="city-glow-desc" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             St. Petersburg in square format. Live project started in 2019.
           </p>
           <div class="city-glow-gallery">
-            <a href="../images/city-glow/cg-img-1.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-1.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-1.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-2.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-2.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-2.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-3.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-3.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-3.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-4.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-4.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-4.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-5.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-5.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-5.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-6.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-6.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-6.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-7.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-7.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-7.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-8.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-8.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-8.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-9.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-9.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-9.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-10.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-10.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-10.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-11.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-11.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-11.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-12.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-12.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-12.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-13.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-13.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-13.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-14.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-14.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-14.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-15.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-15.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-15.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-16.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-16.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-16.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-17.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-17.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-17.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-18.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-18.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-18.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-19.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-19.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-19.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-20.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-20.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-20.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-21.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-21.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-21.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-22.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-22.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-22.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-23.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-23.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-23.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-24.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-24.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-24.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-25.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-25.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-25.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-26.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-26.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-26.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-27.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-27.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-27.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-28.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-28.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-28.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-29.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-29.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-29.jpg" class="city-glow-img">
             </a>
-            <a href="../images/city-glow/cg-img-30.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/city-glow/cg-img-30.jpg" class="city-glow-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/city-glow/cg-img-30.jpg" class="city-glow-img">
             </a>
           </div>
