--- a/www/exhibitions.html
+++ b/www/exhibitions.html
@@ -94,61 +94,63 @@
       <div class="exhibitions-cover">
       </div>
       <div class="exhibitions-container">
-        <h2 class="exhibitions-title">
+        <h2 class="exhibitions-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
           Exhibitions
         </h2>
-        <p class="exhibitions-text">
-          <strong>2023</strong> —
-          <a href="https://vk.com/wall711598374_439" target="_blank" rel="noopener noreferrer" class="exhibitions-link">
-            Minimalism: The Less Is The More</a>. Mayak Art Residence, Sakhalin.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2020</strong> — Not An Accidental Witness vol. 2. Contemporary Art Center «Oblaka». Ufa, Bashkortostan.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2020</strong> — 15th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
-        </p>
-        <p class="exhibitions-text">
-           <strong>2019</strong> — 14th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2019</strong> —
-          <a href="https://phodar.net" target="_blank" rel="noopener noreferrer" class="exhibitions-link">
-            10th International Phodar Biennial</a>. «Metamorphoses» series. Central Railway Station. Sofia, Bulgaria.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2019</strong> — Not An Accidental Witness vol. 2. Sakharov Center. Moscow, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2018</strong> — Not An Accidental Witness vol. 1. Human Rights House Foundation. Oslo, Norway.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2018</strong> — Not An Accidental Witness vol. 2. Human Rights House. Voronezh, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2018</strong> — Not An Accidental Witness vol. 1. Art space «Gates». Kaliningrad, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2018</strong> — St.Petersburg’s Landscape. Kliment Timiryazev Library. St.Petersburg, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2018</strong> — Not An Accidental Witness vol. 1. Open Space. St.Petersburg, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2017</strong> — 12th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2017</strong> — Not An Accidental Witness vol. 1. Human Rights House. Voronezh, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2017</strong> — Baltic Biennale of Photography. Kaliningrad Art Gallery. Kaliningrad, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2017</strong> — Lines and Graphics of St.Petersburg. Kliment Timiryazev Library. St.Petersburg, Russia.
-        </p>
-        <p class="exhibitions-text">
-          <strong>2017</strong> — The Hope International Photo Festival. Innovative Cultural Center. Kaluga, Russia.
-        </p>
+        <div data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-out-quad">
+          <p class="exhibitions-text">
+            <strong>2023</strong> —
+            <a href="https://vk.com/wall711598374_439" target="_blank" rel="noopener noreferrer" class="exhibitions-link">
+              Minimalism: The Less Is The More</a>. Mayak Art Residence, Sakhalin.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2020</strong> — Not An Accidental Witness vol. 2. Contemporary Art Center «Oblaka». Ufa, Bashkortostan.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2020</strong> — 15th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
+          </p>
+          <p class="exhibitions-text">
+             <strong>2019</strong> — 14th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2019</strong> —
+            <a href="https://phodar.net" target="_blank" rel="noopener noreferrer" class="exhibitions-link">
+              10th International Phodar Biennial</a>. «Metamorphoses» series. Central Railway Station. Sofia, Bulgaria.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2019</strong> — Not An Accidental Witness vol. 2. Sakharov Center. Moscow, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2018</strong> — Not An Accidental Witness vol. 1. Human Rights House Foundation. Oslo, Norway.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2018</strong> — Not An Accidental Witness vol. 2. Human Rights House. Voronezh, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2018</strong> — Not An Accidental Witness vol. 1. Art space «Gates». Kaliningrad, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2018</strong> — St.Petersburg’s Landscape. Kliment Timiryazev Library. St.Petersburg, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2018</strong> — Not An Accidental Witness vol. 1. Open Space. St.Petersburg, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2017</strong> — 12th Annual International Exhibition «The City-Habitat» at the Center of Books and Graphics. St.Petersburg, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2017</strong> — Not An Accidental Witness vol. 1. Human Rights House. Voronezh, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2017</strong> — Baltic Biennale of Photography. Kaliningrad Art Gallery. Kaliningrad, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2017</strong> — Lines and Graphics of St.Petersburg. Kliment Timiryazev Library. St.Petersburg, Russia.
+          </p>
+          <p class="exhibitions-text">
+            <strong>2017</strong> — The Hope International Photo Festival. Innovative Cultural Center. Kaluga, Russia.
+          </p>
+        </div>
       </div>
     </section>
   </main>
