--- a/www/inner-landscapes.html
+++ b/www/inner-landscapes.html
@@ -94,74 +94,74 @@
         <div class="inner-landscapes-cover">
         </div>
         <div class="inner-landscapes-container">
-          <h2 class="inner-landscapes-title">
+          <h2 class="inner-landscapes-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             Inner landscapes
           </h2>
-          <p class="inner-landscapes-desc">
+          <p class="inner-landscapes-desc" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             Some experimental pictures taken with iPhone SE and Fujifilm X100T. 2018-2019.
           </p>
           <div class="inner-landscapes-gallery">
-            <a href="../images/inner-landscapes/il-img-1.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-1.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-1.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-2.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-2.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-2.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-3.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-3.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-3.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-4.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-4.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-4.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-5.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-5.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-5.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-6.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-6.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-6.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-7.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-7.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-7.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-8.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-8.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-8.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-9.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-9.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-9.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-10.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-10.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-10.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-11.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-11.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-11.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-12.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-12.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-12.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-13.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-13.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-13.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-14.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-14.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-14.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-15.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-15.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-15.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-16.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-16.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-16.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-17.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-17.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-17.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-18.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-18.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-18.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-19.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-19.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-19.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-20.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-20.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-20.jpg" class="inner-landscapes-img">
             </a>
-            <a href="../images/inner-landscapes/il-img-21.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/inner-landscapes/il-img-21.jpg" class="inner-landscapes-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/inner-landscapes/il-img-21.jpg" class="inner-landscapes-img">
             </a>
           </div>
