--- a/www/grace.html
+++ b/www/grace.html
@@ -94,65 +94,65 @@
         <div class="grace-cover">
         </div>
         <div class="grace-container">
-          <h2 class="grace-title">
+          <h2 class="grace-title" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             Grace
           </h2>
-          <p class="grace-desc">
+          <p class="grace-desc" data-aos="fade-in" data-aos-duration="1500" data-aos-easing="ease-out-quad">
             Apraksin Drov. Local market. April 2018.
           </p>
           <div class="grace-gallery">
-            <a href="../images/grace/gr-img-1.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-1.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-1.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-2.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-2.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-2.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-3.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-3.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-3.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-4.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-4.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-4.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-5.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-5.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-5.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-6.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-6.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-6.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-7.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-7.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-7.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-8.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-8.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-8.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-9.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-9.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-9.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-10.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-10.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-10.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-11.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-11.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-11.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-12.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-12.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-12.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-13.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-13.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-13.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-14.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-14.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-14.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-15.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-15.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-15.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-16.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-16.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-16.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-17.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-17.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-17.jpg" class="grace-img">
             </a>
-            <a href="../images/grace/gr-img-18.jpg" class="grace-item" data-fslightbox="selected-works-gallery">
+            <a href="../images/grace/gr-img-18.jpg" class="grace-item" data-fslightbox="selected-works-gallery" data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-out-quad">
               <img src="../images/grace/gr-img-18.jpg" class="grace-img">
             </a>
           </div>
